b=450916; mobile gtk2 optimizations -- prefs for: force 24bpp everywhere; use a single pixmap for double-buffer backing store (bounded by screen dimensions); disable native theme; r=jeff,sr=stuart